kubernates/UI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui-svc
spec:
  selector:
    app.kubernetes.io/name: weatherapp-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
